# signalroom

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  INCIDENT_POSTMORTEM_2025-12-19.md  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.claude/: CONSTITUTION.md
.claude/skills/dlt/: SKILL.md
.claude/skills/git/: SKILL.md
.claude/skills/pipeline/: SKILL.md
.claude/skills/troubleshoot/: SKILL.md
.dlt/: config.toml  secrets.toml.example
docker/temporal-config/: development-sql.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_MODEL.md  DATA_ORGANIZATION.md  EVERFLOW_IMPLEMENTATION.md  FUTURE_IMPROVEMENTS.md  INTEGRATIONS.md  OPERATIONS.md  PROJECT_PATTERNS.md  QUERIES.sql  REDTRACK_IMPLEMENTATION.md  ROADMAP.md  S3_BACKFILL_PLAN.md  SERVICE_ACCOUNT_SETUP.md  SOURCES.md  TASKS.md  rawreference.md
docs/templates/: IMPLEMENTATION_SUMMARY_TEMPLATE.md  SLACK_MESSAGE_TEMPLATE.md
scripts/: run_pipeline.py  setup_schedules.py  test_temporal_connection.py  trigger_workflow.py
src/signalroom/: __init__.py
src/signalroom/common/: __init__.py  clients.py  config.py  logging.py
src/signalroom/notifications/: __init__.py  channels.py
src/signalroom/pipelines/: __init__.py  runner.py
src/signalroom/reports/: __init__.py  definitions.py  registry.py  renderer.py  runner.py
src/signalroom/sources/: __init__.py
src/signalroom/temporal/: __init__.py  activities.py  config.py  workflows.py
src/signalroom/workers/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/fixtures/: test_orders_100.csv
(+16 files in other folders)
