[project]
name = "signalroom"
version = "0.1.0"
description = "Marketing Data Platform - ETL/ELT with dlt and Temporal"
requires-python = ">=3.11"

dependencies = [
    # Core
    "dlt[postgres]>=1.0.0",
    "temporalio>=1.7.0",
    # Config & Logging
    "structlog>=24.0.0",
    "pydantic-settings>=2.0.0",
    # Sources
    "s3fs>=2024.0.0",
    "httpx>=0.27.0",
    # Notifications
    "slack-sdk>=3.0.0",
    "resend>=2.0.0",
    "twilio>=9.0.0",
    "jinja2>=3.1.6",
    "mjml>=0.11.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "dlt[duckdb]",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]
browser = [
    "playwright>=1.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signalroom"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["signalroom"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
